--- a/resultado.html
+++ b/resultado.html
@@ -5,7 +5,7 @@
     <title>Cazadores del Carbono</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="ed-grid.css" type="text/css">
-    <link rel="stylesheet" href="estilo.css" type="text/css">
+    <link rel="stylesheet" href="estilo2.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -15,15 +15,15 @@
       WHAT'S FOR DINNER?
     </div>
     <div class="movil-100" id="menu">
-	     <ul class="movil-7" id="boton1"><a href="reto.html">RETO</a></ul>
-       <ul class="movil-7" id="boton2"><a href="resultado.html">RESULTADOS</a></ul>
+       <ul class="movil-7" id="boton1"><a href="reto.html">RETO</a></ul>
+       <ul class="movil-7" id="boton2"><a href="solucion.html">RESULTADOS</a></ul>
        <ul class="movil-7" id="boton3"><a href="datos.html">SOLUCION</a></ul>
-       <ul class="movil-7" id="boton4"><a href="aurasma.html">DATOS</a></ul>
-       <!--<ul class="movil-5">CURIOSIDADES</ul>-->
+       <ul class="movil-7" id="boton4"><a href="aurasma.html">DATOS</a></ul
+>       <!--<ul class="movil-5">CURIOSIDADES</ul>-->
        <!--<ul class="movil-5">CONTACTOS</ul>-->
     </div>
     <div class="movil-100" id="banner">
-      <img src="fondo.jpg">
+      <img src="resultado.png">
     </div>
     <div class="movil-100" id="pie">
       <img src="pie.png">
@@ -33,7 +33,7 @@
        <p>LAGO EN EMERGENCIA</p>
        <p>Estudiantes de 6to de Primaria se preparan para la IX Feria de Ciencias Sociales, a realizarse el dia sabado 2 de julio, en el cual podremos ver como es que los paceños maltratamos al Lago Titicaca</p>
     </div>
-	 <div class="movil-25" id="noti2">
+   <div class="movil-25" id="noti2">
       <img class="movil-10" src="1.jpg">
       <p>AGUAS DEL SILALA</p>
       <p>Estudiantes de 4to de Secundaria se preparan para la IX Feria de Ciencias Sociales, a realizarse el dia sabado 2 de julio, en el cual podremos apreciar por que las aguas del Silala son importantes para el pais</p>
